Added some modals, alerts and tool tips

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <link rel="stylesheet" href="static/css/oktavilla-ui.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script src="static/js/oktavilla-ui.js"></script>
+    <script src="static/js/boilerplate.js"></script>
   </head>
   <body>
     <h1>Oktavilla UI Boilerplate</h1>
@@ -41,6 +44,13 @@
         </div>
         <button class="btn"><span></span> Multi button</button>
       </div>
+    </div>
+    <div class="well">
+      Modals & dialogues: 
+      <button class="btn" id="show-alert">Click for alert</button>
+      <button class="btn" id="show-modal">Click for modal</button>
+      <button class="btn" id="show-modal-form">Click for modal form</button>
+      <button class="btn" id="show-tool-tip">Show tool tip</button>
     </div>
     
     <h2>Form elements</h2>
@@ -92,6 +102,10 @@
         </div>
         <div class="form-element">
           <label>Date select</label>
+          To-do
+        </div>
+        <div class="form-element">
+          <label>Searchable select</label>
           To-do
         </div>
         <div class="form-element">
