--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <html>
   <head>
-    <link rel="stylesheet" href="static/css/oktavilla-ui.css">
+    <title>Oktavilla UI Boilerplate</title>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <link rel="stylesheet/less" type="text/css" href="static/css/oktavilla-ui.less">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script src="static/js/less.js" type="text/javascript"></script>
     <script src="static/js/oktavilla-ui.js"></script>
     <script src="static/js/boilerplate.js"></script>
   </head>
   <body>
     <h1>Oktavilla UI Boilerplate</h1>
     <p>
-      A collection of the most commonlu used UI elements in our apps.
+      A collection of the most commonly used UI elements in our apps.
     </p>
     
     <h2>Buttons etc.</h2>
